# failsafe-py

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: faq.md  index.md  release_notes.md  roadmap.md
docs/components/: bulkhead.md  cache.md  circuit_breakers.md  failfast.md  fallback.md  featuretoggle.md  hedge.md  index.md  rate_limiter.md  retry.md  timeout.md
docs/snippets/bulkhead/: bulkhead_context.py  bulkhead_decorator.py
docs/snippets/cache/: cache_context.py  cache_decorator.py
docs/snippets/circuit_breakers/: breaker_context.py  breaker_decorator.py
docs/snippets/failfast/: failfast_context.py  failfast_decorator.py
docs/snippets/fallback/: fallback_decorator.py
docs/snippets/featuretoggle/: featuretoggle_context.py  featuretoggle_decorator.py
docs/snippets/hedge/: hedge_context.py  hedge_decorator.py
docs/snippets/ratelimiter/: ratelimiter_context.py  ratelimiter_decorator.py
docs/snippets/retry/: jitter_out_retries.py  retry_backoff_const.py  retry_backoff_const_intervals.py  retry_backoff_custom.py  retry_backoff_custom_jitter.py  retry_backoff_decorrexp.py  retry_backoff_expo.py  retry_backoff_expo_jitter.py  retry_backoff_fibo.py  retry_backoff_linear.py  retry_backoff_softexp.py  retry_basic_usage.py  retry_infinite_attempts.py  retry_no_delays.py
docs/snippets/timeout/: timeout_context.py  timeout_decorator.py
failsafe/: __init__.py  events.py  exceptions.py
failsafe/bulkhead/: README.md  __init__.py  api.py  events.py  exceptions.py  manager.py
failsafe/cache/: README.md  __init__.py  api.py  events.py  exceptions.py  manager.py  typing.py
failsafe/circuitbreaker/: __init__.py  api.py  context.py  events.py  exceptions.py  managers.py  states.py
failsafe/client/: __init__.py  auth.py  base_client.py  base_enhanced_client.py
failsafe/controller/: __init__.py  failsafe_controller.py
failsafe/failfast/: README.md  __init__.py  api.py  events.py  exceptions.py  manager.py  typing.py
failsafe/fallback/: __init__.py  api.py  events.py  manager.py
failsafe/featuretoggle/: README.md  __init__.py  api.py  events.py  exceptions.py  manager.py  typing.py
failsafe/generator/: README.md  __main__.py  cli.py  postgen.py
failsafe/generator/templates/python-fastapi/: .dockerignore.mustache  .env.mustache  .gitignore.mustache  Dockerfile.mustache  api.mustache  docker-compose.mustache  main.mustache  pyproject_toml.mustache  requirements.mustache  settings.mustache  telemetry.mustache
failsafe/hedge/: README.md  __init__.py  api.py  events.py  exceptions.py  manager.py  typing.py
failsafe/integrations/: __init__.py  fastapi_helpers.py
failsafe/integrations/opentelemetry/: __init__.py  bulkhead.py  cache.py  circuitbreaker.py  failfast.py  fallback.py  featuretoggle.py  hedge.py  retry.py  timeout.py
failsafe/ratelimit/: __init__.py  api.py  buckets.py  events.py  exceptions.py  instrumeted_managers.py  managers.py  retry_after.py
failsafe/retry/: README.md  __init__.py  api.py  backoffs.py  counters.py  events.py  exceptions.py  manager.py
failsafe/timeout/: README.md  __init__.py  api.py  events.py  exceptions.py  logging.py  manager.py
integrations/opentelemetry/: __init__.py  __version__.py  bulkhead.py  cache.py  circuitbreaker.py  failfast.py  fallback.py  featuretoggle.py  hedge.py  retry.py  timeout.py
service/: pyproject.toml
service/src/: main.py  telemetry.py
tests/test_bulkhead/: test_api.py  test_validation.py
tests/test_cache/: test_api.py  test_validation.py
tests/test_circuitbreaker/: test_api.py
tests/test_failfast/: test_api.py  test_behaviour.py  test_validation.py
tests/test_fallback/: test_api.py
tests/test_featuretoggle/: test_api.py  test_validation.py  test_wrapped_context.py
tests/test_hedge/: test_api.py  test_validation.py
tests/test_ratelimiter/: test_api.py  test_buckets.py
tests/test_retry/: test_backoffs.py  test_decorator.py  test_jitters.py
tests/test_timeout/: test_api.py
(+2 files in other folders)
