[project]
name = "failsafe"
version = "0.0.1"
description = "Fault tolerance for resiliency and stability in modern Python applications"
readme = "README.md"
authors = [{ name = "Sasa Savic", email = "sasa.savic@team.telstra.com" }]
keywords = [
    "resiliency",
    "stability",
    "retries",
    "bulkhead",
    "rate limiting",
    "concurrency limiting",
    "stability",
    "microservices",
    "distributed systems",
    "timeouts",
    "circuit breakers"
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: Stackless",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "PyYAML ~=6.0.3",
    "fastapi ~=0.120.2",
    "pydantic ~=2.12.3"
]

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8.0.0",
    "mypy>=0.991,<0.992",
    "ruff==0.0.261",
    "black>=22.12.0,<23.0.0",
    "isort>=5.11.2,<6.0.0",
    "pytest-asyncio>=0.20.3,<0.21.0",
    "coverage>=7.0.1,<8.0.0",
    "mutmut>=2.4.3,<3.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
]
docs = [
    "mkdocs>=1.4.2,<2.0.0",
    "mkdocs-material>=8.5.11,<9.0.0",
    "mdx-include>=1.4.2,<2.0.0",
    "mkautodoc>=0.2.0,<0.3.0",
    "httpx>=0.23.1,<0.24.0",
    "fastapi~=0.120.2",
]

[tool.black]
line-length = 120
target-version = ['py314']

[tool.ruff]
line-length = 120

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.14.
target-version = "py314"

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["failsafe", "integrations"]
only-include = ["failsafe", "integrations", "py.typed", "README.md"]

[tool.hatch.build.targets.sdist]
include = ["failsafe", "integrations", "py.typed", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra"]