[project]
name = "failsafe-service"
version = "0.1.0"
description = "FastAPI service using async-only failsafe resiliency with OpenTelemetry."
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
  "fastapi>=0.116.0,<1",
  "uvicorn>=0.35.0,<1",
  "httpx>=0.27,<1",
  "opentelemetry-api>=1.37.0,<2",
  "opentelemetry-sdk>=1.37.0,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.37.0,<2",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "opentelemetry-instrumentation-asgi>=0.49b0",
  # local lib name; source mapped below
  "failsafe-py",
]

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<6",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
]

[tool.uv]
# Pin the Python runtime used by uv for this project (optional)
python-preference = "only-managed"

[tool.uv.sources]
# Use the local failsafe library from the monorepo root
failsafe-py = { path = "../" }

[tool.hatch.build.targets.wheel]
packages = ["src"]
